@@ -5,3 +5,6 @@ Team Members: Cody Schoenick
 Description: Quickflip is intended to be a flashcard app similar to Quizlet. I hope to implement features that allow users to write multiple flashcards with terms and definitions, save their flashcards, and load flashcards from a .txt file. Given that more and more of Quizlet's features are becoming paid only and less accessible, I felt that that developing Quickflip would be a great exericse to not only learn Java but also implement something that I can use in my own life. This app should be able to help mostly students study course materials and prepare for any exams or quizzes; this app would be particularly helpful for learning new terms, vocabulary, or definitions. 
 
 Plan/Effort: To begin, I intend on implementing the code to allow users to add terms and definitions to the flashcards, which I anticipate to be the easiest to accomplish. After this step, I would need to design and create a graphically user interface; I would like to design something similar to Quizlet that is user friendly and visually appealing. I anticipate this step to be the most difficult to accomplish and thus I intend to focus most of my efforts on learning JavaFX and imeplementing my graphical user interface. 
+
+java --enable-preview --module-path (path to JavaFX library) --add-modules javafx.controls,javafx.graphics,javafx.fxml -jar Quickflip.jar
+
